# VTCode

./: .OPTIMIZATION_REPORT_FINAL.md  .cargo-rdme.toml  .changes_summary.md  .env.example  .gitignore  .mcp.json  .vtcodegitignore  AGENTS.md  AGENT_COMMAND_EXECUTION_FIX.md  AGENT_MESSAGE_CHAIN_IMPROVEMENTS.md  ANSTYLE_INTEGRATION_SUMMARY.md  ATLAS_CLOUD_PROVIDER_REVIEW.md  BEFORE_AFTER_COMPARISON.md  CARGO_PATH_FIX.md  CHANGELOG.md  CLEANUP_ACTION_PLAN.md  CLEANUP_CHECKLIST.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_STATUS.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.md  COMPLETE_FIX_SUMMARY.md  COMPLETION_CHECKLIST.md  COMPLEXITY_AUDIT.md  COMPREHENSIVE_PTY_FIX.md  CONFIGURATION_REVIEW_INDEX.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPLOYMENT_CHECKLIST.md  DOCTOR_ENHANCEMENT_SUMMARY.txt  DUPLICATION_CLEANUP_SUMMARY.md  Dockerfile.build  FINAL_IMPLEMENTATION_OUTCOME.md  FINAL_SUMMARY.md  FIX_INDEX.md  HOMEBREW_FIX_COMPLETE.md  HOMEBREW_FIX_VERIFICATION.md  (+73 more)
acp-client/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: exec_policy_parser.rs  shell_parser.rs  unified_path_validation.rs
vtcode-acp/: AGENTS.md  Cargo.toml  README.md
vtcode-acp-client/: Cargo.toml  README.md
vtcode-acp-client/src/: capabilities.rs  client_v2.rs  discovery.rs  error.rs  jsonrpc.rs  lib.rs  messages.rs  session.rs  transport.rs
vtcode-acp/src/: capabilities.rs  client.rs  client_v2.rs  discovery.rs  error.rs  jsonrpc.rs  lib.rs  permissions.rs  reports.rs  session.rs  tooling_provider.rs  transport.rs
vtcode-auth/: AGENTS.md  Cargo.toml  README.md
vtcode-auth/src/: config.rs  credentials.rs  lib.rs  mcp_oauth.rs  oauth_server.rs  openai_chatgpt_oauth.rs  openrouter_oauth.rs  pkce.rs  storage_paths.rs
vtcode-bash-runner/: AGENTS.md  Cargo.toml  README.md
vtcode-bash-runner/examples/: dry_run.rs
vtcode-bash-runner/src/: background.rs  executor.rs  lib.rs  pipe.rs  policy.rs  process.rs  process_group.rs  runner.rs  stream.rs
vtcode-bash-runner/tests/: pipe_tests.rs
vtcode-collaboration-tool-specs/: AGENTS.md  Cargo.toml  README.md
vtcode-collaboration-tool-specs/src/: lib.rs
vtcode-commons/: AGENTS.md  Cargo.toml  README.md
vtcode-commons/src/: ansi.rs  ansi_capabilities.rs  ansi_codes.rs  anstyle_utils.rs  async_utils.rs  at_pattern.rs  cgp.rs  color256_theme.rs  color_policy.rs  colors.rs  diff.rs  diff_paths.rs  diff_preview.rs  diff_theme.rs  editor.rs  env_lock.rs  error_category.rs  errors.rs  exclusions.rs  file_input.rs  formatting.rs  fs.rs  http.rs  image.rs  lib.rs  llm.rs  lr_map.rs  memory.rs  model_family.rs  newtype.rs  paths.rs  preview.rs  project.rs  reference.rs  sanitizer.rs  serde_helpers.rs  slug.rs  styling.rs  telemetry.rs  thread_safety.rs  (+9 more)
vtcode-config/: AGENTS.md  Cargo.toml  README.md  build.rs  build_codegen.rs
vtcode-config/build_data/: openrouter_models.json
vtcode-config/data/: network_allowlist.toml
vtcode-config/examples/: minimal.rs  schema_dump.rs
vtcode-config/src/: acp.rs  agent_teams.rs  api_keys.rs  codex.rs  constants.rs  context.rs  debug.rs  env_helpers.rs  hooks.rs  ide_context.rs  lib.rs  mcp.rs  models.rs  network_allowlist.rs  optimization.rs  output_styles.rs  root.rs  router.rs  safety.rs  schema.rs  status_line.rs  subagent.rs  subagents.rs  telemetry.rs  timeouts.rs  update.rs  workspace_env.rs
vtcode-config/tests/: loader.rs  pty_config.rs  schema.rs  subagent_loading.rs  vim_and_notification.rs
vtcode-core/: AGENTS.md  Cargo.toml  README.md  build.rs  vtcode.toml
vtcode-core/.vtcode/: tool-policy.json
vtcode-core/benches/: agent_harness.rs  tool_pipeline.rs
vtcode-core/build_data/: openrouter_models.json
vtcode-core/examples/: anstyle_ratatui_example.rs  anstyle_test.rs  dialoguer_example.rs  file_search_bridge_demo.rs  markdown_storage_workflow.rs  modern_tui_demo.rs  next_gen_harness.rs  verify_optimization.rs
vtcode-core/src/: bash_runner.rs  components.rs  config_verification_tests.rs  enhanced_mcp_config.rs  error.rs  git_info.rs  http_client.rs  id_newtype.rs  ide_context.rs  instructions.rs  lib.rs  loop_memory.rs  loop_state.rs  markdown_ledger.rs  markdown_storage.rs  mcp_client.rs  memory_integration_tests.rs  memory_tests.rs  permissions.rs  persistent_memory.rs  primary_agent.rs  project.rs  project_doc.rs  retry.rs  retry_after.rs  review.rs  sandbox.rs  security.rs  session_agent.rs  shutdown.rs  simple_indexer.rs  tool_policy.rs  top_level_agent.rs  turn_metadata.rs  types.rs  version.rs  zsh_exec_bridge.rs
vtcode-core/tests/: apply_patch_alias.rs  apply_patch_comprehensive.rs  apply_patch_semantic.rs  ast_grep_tool_test.rs  code_search_contract.rs  command_tool_tests.rs  config_loader_test.rs  core_fuzz_props.rs  create_file_tool.rs  delete_file_tool.rs  execpolicy_security_tests.rs  file_conflict_integration.rs  file_ops_read.rs  file_ops_security.rs  filesystem_tool_aliases.rs  get_errors_tool.rs  keyboard_protocol_integration.rs  loop_detection_integration.rs  loop_detector_props.rs  lsp_tool_test.rs  mcp_basic_test.rs  mcp_cli_integration_test.rs  mcp_context7_manual.rs  mcp_integration_e2e.rs  mcp_integration_test.rs  pty_test.rs  (+24 more)
vtcode-design/: AGENTS.md  Cargo.toml  README.md
vtcode-eval/: Cargo.toml
vtcode-exec-events/: Cargo.toml  README.md
vtcode-file-search/: AGENTS.md  Cargo.toml  README.md
vtcode-ghostty-core/: AGENTS.md  Cargo.toml  README.md
vtcode-ghostty-vt-sys/: AGENTS.md  Cargo.toml  README.md  build.rs  ghostty-vt-manifest.toml
vtcode-indexer/: Cargo.toml  README.md
vtcode-llm/: AGENTS.md  Cargo.toml  README.md
vtcode-lmstudio/: AGENTS.md  Cargo.toml  README.md
vtcode-macros/: AGENTS.md  Cargo.toml  README.md
vtcode-markdown-store/: AGENTS.md  Cargo.toml  README.md
vtcode-mcp/: Cargo.toml
vtcode-process-hardening/: AGENTS.md  Cargo.toml  README.md
vtcode-safety/: AGENTS.md  Cargo.toml
vtcode-session-store/: AGENTS.md  Cargo.toml
vtcode-skills/: AGENTS.md  Cargo.toml  README.md
vtcode-terminal-detection/: AGENTS.md  Cargo.toml  README.md
vtcode-theme/: AGENTS.md  Cargo.toml  README.md
vtcode-tool-types/: Cargo.toml
(+5693 files in other folders)
