[package]
name = "vtcode"
version = "0.85.1"
edition = "2024"
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "A Rust-based terminal coding agent with modular architecture supporting multiple LLM providers"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode"
keywords = ["ai", "coding", "agent", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
exclude = [
    "target/",
    ".github/",
    "docs/",
    "scripts/",
    "screenshots/",
    "logs/",
    "prompts/",
    "dist/",
    "npm/",
    "vtcode-core/embedded_assets_source/",
    "resources/",
]
default-run = "vtcode"

# Override sections to consolidate duplicate dependencies
[workspace.dependencies]
base64 = "0.22.1"
crossterm = "0.29"
schemars = "1.2"
thiserror = "2.0.18"
unicode-width = "0.2.0"
serde_json = "1.0"
tempfile = "3.25"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
num_cpus = "1.16"
clap = { version = "4.5", features = ["derive"] }
pretty_assertions = "1.4"
libc = "0.2"
rand = "0.10"
semver = "1.0"
fs2 = "0.4"
mimalloc = { version = "0.1", default-features = false }
rustc-hash = "2.1"
keyring = "3"

[workspace.package]
version = "0.85.1"
edition = "2021"
license = "MIT"

[workspace]
members = [
    "vtcode-acp-client",
    "vtcode-core",
    "vtcode-tui",
    "vtcode-commons",
    "vtcode-config",
    "vtcode-llm",
    "vtcode-lmstudio",
    "vtcode-markdown-store",
    "vtcode-indexer",
    "vtcode-tools",
    "vtcode-bash-runner",
    "vtcode-exec-events", "vtcode-file-search",
]
exclude = ["zed-extension", "vtcode-process-hardening"]

[patch.crates-io]
vtcode-commons = { path = "vtcode-commons" }
vtcode-markdown-store = { path = "vtcode-markdown-store" }
vtcode-indexer = { path = "vtcode-indexer" }
vtcode-bash-runner = { path = "vtcode-bash-runner" }
vtcode-exec-events = { path = "vtcode-exec-events" }
vtcode-file-search = { path = "vtcode-file-search" }

[workspace.lints]
# Rust compiler lints
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_qualifications = "warn"
rust.unused_results = "allow"  # Too verbose for development
rust.trivial_numeric_casts = "warn"
rust.unsafe_code = "warn"
rust.unstable_features = "warn"

[workspace.lints.clippy]
# =============================================================================
# Correctness Lints (deny - catches outright errors)
# =============================================================================
# Reference: https://rust-lang.github.io/rust-clippy/master/index.html
# Based on best practices from OpenAI Codex and Rust community standards

# Core correctness lints
approx_constant = "deny"
async_yields_async = "deny"
bad_bit_mask = "deny"
borrow_interior_mutable_const = "deny"
builtin_type_shadow = "deny"
clone_on_copy = "deny"
const_is_empty = "deny"
derive_ord_xor_partial_ord = "deny"
derived_hash_with_manual_eq = "deny"
double_neg = "deny"
duplicate_mod = "deny"
enum_clike_unportable_variant = "deny"
eq_op = "deny"
erasing_op = "deny"
fn_address_comparisons = "deny"
if_let_mutex = "deny"
ifs_same_cond = "deny"
impl_hash_eq_without_eq = "deny"
impossible_comparisons = "deny"
incompatible_msrv = "deny"
indexing_slicing = "deny"
infinite_iter = "deny"
inherent_to_string_shadow_display = "deny"
inline_fn_without_body = "deny"
invalid_null_ptr_usage = "deny"
invalid_regex = "deny"
inverted_saturating_sub = "deny"
iter_not_returning_iterator = "deny"
iter_skip_zero = "deny"
iterator_step_by_zero = "deny"
let_underscore_lock = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lint_groups_priority = "deny"
match_str_case_mismatch = "deny"
mem_replace_with_uninit = "deny"
min_max = "deny"
mismatched_target_case = "deny"
misnamed_getters = "deny"
missing_transmute_annotations = "deny"
mistyped_literal_suffixes = "deny"
modulo_arithmetic_on_nonzero = "deny"
modulo_one = "deny"
mut_from_ref = "deny"
mut_key = "deny"
never_loop = "deny"
non_octal_unix_permissions = "deny"
nonsensical_open_options = "deny"
not_unsafe_ptr_arg_deref = "deny"
option_env_unwrap = "deny"
out_of_bounds_indexing = "deny"
overly_complex_bool_expr = "deny"
panicking_overflow_checks = "deny"
panicking_unwrap = "deny"
possible_missing_comma = "deny"
precedence = "deny"
read_zero_byte_vec = "deny"
recursive_format_impl = "deny"
redundant_comparisons = "deny"
redundant_locals = "deny"
redundant_pattern_matching = "deny"
regex_macro = "deny"
repeat_once = "deny"
self_assignment = "deny"
serde_api_misuse = "deny"
shadow_same = "deny"
single_element_loop = "deny"
skip_while_next = "deny"
slow_vector_initialization = "deny"
suspicious_splitn = "deny"
suspicious_to_owned = "deny"
transmute_null_to_fn = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
type_id_on_boxed_local = "deny"
unconditional_recursion = "deny"
uninhabited_references = "deny"
uninit_as = "deny"
uninit_vec = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unit_return_expecting_ord = "deny"
unknown_clippy_lints = "deny"
unnecessary_clippy_cfg = "deny"
unnecessary_get_then_check = "deny"
unnecessary_result_map_or_else = "deny"
unreachable = "deny"
unsafe_removed_from_name = "deny"
unused_async = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_self = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
useless_attribute = "deny"
vec_resize_to_zero = "deny"
while_immutable_condition = "deny"
wrong_transmute = "deny"
zero_repeat_side_effects = "deny"
zero_sized_map_values = "deny"

# =============================================================================
# Suspicious Lints (warn - likely incorrect)
# =============================================================================
arc_with_non_send_sync = "warn"
assertions_on_constants = "warn"
assigning_clones = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
boxed_local = "warn"
cast_abs_to_unsigned = "warn"
cast_enum_truncation = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
cmp_null = "warn"
cmp_owned = "warn"
cognitive_complexity = "warn"
collapsible_else_if = "warn"
collapsible_if = "warn"
collapsible_match = "warn"
collapsible_str_replace = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_constructed_unit_structs = "warn"
default_numeric_fallback = "warn"
default_trait_access = "warn"
deprecated_cfg_attr = "warn"
deprecated_semver = "warn"
deref_addrof = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_names = "warn"
disallowed_script_idents = "warn"
disallowed_types = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
double_must_use = "warn"
double_parens = "warn"
drop_non_drop = "warn"
duplicate_underscore_argument = "warn"
empty_enum = "warn"
empty_enum_without_never_type = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
err_expect = "warn"
excessive_precision = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
expect_fun_call = "warn"
expect_used = "warn"
explicit_auto_deref = "warn"
explicit_counter_loop = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
explicit_write = "warn"
extra_unused_lifetimes = "warn"
extra_unused_type_parameters = "warn"
fallible_impl_from = "warn"
field_reassign_with_default = "warn"
filetype_is_file = "warn"
filter_map_bool_then = "warn"
filter_map_next = "warn"
find_map = "warn"
flat_map_option = "warn"
float_arithmetic = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_any = "warn"
for_kv_map = "warn"
forget_non_drop = "warn"
format_collect = "warn"
format_push_string = "warn"
four_forward_slashes = "warn"
from_iter_instead_of_collect = "warn"
from_over_into = "warn"
from_raw_with_void_ptr = "warn"
from_str_radix_10 = "warn"
future_not_send = "warn"
get_first = "warn"
get_unwrap = "warn"
identity_op = "warn"
if_not_else = "warn"
if_same_then_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
implicit_return = "warn"
implicit_saturating_add = "warn"
implicit_saturating_sub = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
inconsistent_digit_grouping = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infallible_destructuring_match = "warn"
inherent_to_string = "warn"
init_numbered_fields = "warn"
inline_always = "warn"
inspect_for_each = "warn"
int_plus_one = "warn"
integer_division = "warn"
into_iter_on_ref = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
items_after_test_module = "warn"
iter_cloned_collect = "warn"
iter_count = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_kv_map = "warn"
iter_next_loop = "warn"
iter_next_slice = "warn"
iter_nth = "warn"
iter_nth_zero = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
iter_skip_next = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_const_arrays = "warn"
large_digit_groups = "warn"
large_enum_variant = "warn"
large_futures = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
len_without_is_empty = "warn"
len_zero = "warn"
let_and_return = "warn"
let_unit_value = "warn"
let_with_type_underscore = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
main_recursion = "warn"
manual_abs_diff = "warn"
manual_arithmetic_check = "warn"
manual_assert = "warn"
manual_async_fn = "warn"
manual_bits = "warn"
manual_clamp = "warn"
manual_div_ceil = "warn"
manual_filter = "warn"
manual_filter_map = "warn"
manual_find = "warn"
manual_find_map = "warn"
manual_flatten = "warn"
manual_hash_one = "warn"
manual_ignore_case_cmp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_main_separator_str = "warn"
manual_map = "warn"
manual_memcpy = "warn"
manual_midpoint = "warn"
manual_next_back = "warn"
manual_non_exhaustive = "warn"
manual_ok_or = "warn"
manual_option_as_slice = "warn"
manual_range_contains = "warn"
manual_range_patterns = "warn"
manual_rem_euclid = "warn"
manual_retain = "warn"
manual_rotate = "warn"
manual_saturating_arithmetic = "warn"
manual_slice_size_calculation = "warn"
manual_string_new = "warn"
manual_strip = "warn"
manual_try_fold = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
map_all_any_identity = "warn"
map_clone = "warn"
map_collect_result_unit = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_identity = "warn"
map_unit_fn = "warn"
map_unwrap_or = "warn"
match_as_ref = "warn"
match_bool = "warn"
match_like_matches_macro = "warn"
match_on_vec_items = "warn"
match_ref_pats = "warn"
match_result_ok = "warn"
match_same_arms = "warn"
match_single_binding = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mem_replace = "warn"
mem_replace_with_default = "warn"
methods_in_condition = "warn"
min_ident_chars = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_const_for_fn = "warn"
missing_const_for_static = "warn"
missing_doc = "warn"
missing_docs_in_private_items = "warn"
missing_enforced_import_renames = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_inline_in_public_items = "warn"
missing_panics_doc = "warn"
missing_res_start = "warn"
missing_safety_doc = "warn"
missing_trait_methods = "warn"
mixed_case_hex_literals = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
multi_assignments = "warn"
multiple_bound_locations = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
must_use_candidate = "warn"
must_use_unit = "warn"
mut_mut = "warn"
mut_mutex_lock = "warn"
mut_range_bound = "warn"
mutable_key_type = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_arbitrary_self_type = "warn"
needless_bool = "warn"
needless_bool_assign = "warn"
needless_borrow = "warn"
needless_borrowed_reference = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_else = "warn"
needless_for_each = "warn"
needless_if = "warn"
needless_late_init = "warn"
needless_match = "warn"
needless_option_as_deref = "warn"
needless_option_take = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_pub_self = "warn"
needless_question_mark = "warn"
needless_range_loop = "warn"
needless_raw_string = "warn"
needless_raw_string_hashes = "warn"
needless_return = "warn"
needless_return_with_question_mark = "warn"
needless_split = "warn"
needless_update = "warn"
neg_cmp_op_on_partial_ord = "warn"
neg_multiply = "warn"
negative_feature_names = "warn"
new_ret_no_self = "warn"
new_without_default = "warn"
no_effect = "warn"
no_effect_replace = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
non_canonical_clone_impl = "warn"
non_canonical_partial_ord_impl = "warn"
non_expressive_names = "warn"
non_minimal_bool = "warn"
non_send_fields_in_send_ty = "warn"
nonminimal_bool = "warn"
obfuscated_if_else = "warn"
octal_escapes = "warn"
only_used_in_recursion = "warn"
op_ref = "warn"
option_as_ref_cloned = "warn"
option_as_ref_deref = "warn"
option_filter_map = "warn"
option_if_let_else = "warn"
option_map_or_err_ok = "warn"
option_map_or_none = "warn"
option_map_unwrap_or = "warn"
option_option = "warn"
option_take_without_clone = "warn"
or_fun_call = "warn"
or_then_unwrap = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partialeq_ne_impl = "warn"
partialeq_to_none = "warn"
path_buf_push_overwrite = "warn"
pattern_type_mismatch = "warn"
permissions_set_readonly_if = "warn"
pointers_in_nomem_asm_block = "warn"
print_literal = "warn"
print_stderr = "warn"
print_stdout = "warn"
print_with_newline = "warn"
println_empty_string = "warn"
ptr_arg = "warn"
ptr_cast_constness = "warn"
ptr_eq = "warn"
ptr_offset_with_cast = "warn"
pub_enum_variant_names = "warn"
pub_underscore_fields = "warn"
pub_use = "warn"
question_mark = "warn"
question_mark_used = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
range_zip_with_len = "warn"
rc_buffer = "warn"
rc_clone_in_vec_init = "warn"
rc_mutex = "warn"
redundant_as_str = "warn"
redundant_async_block = "warn"
redundant_at_rest_pattern = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
redundant_field_names = "warn"
redundant_pattern = "warn"
redundant_pub_crate = "warn"
redundant_rest_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
redundant_type_annotations = "warn"
ref_as_binding = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
repeat_vec_with_capacity = "warn"
replace_consts = "warn"
result_filter_map = "warn"
result_large_err = "warn"
result_map_or_err_ok = "warn"
result_map_unwrap_or = "warn"
result_unit_err = "warn"
return_self_not_must_use = "warn"
same_item_push = "warn"
same_name_method = "warn"
self_named_constructors = "warn"
self_or_else = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
shadow_reuse = "warn"
shadow_unrelated = "warn"
short_circuit_statement = "warn"
should_panic_without_expect = "warn"
should_implement_trait = "warn"
similar_names = "warn"
single_call_fn = "warn"
single_char_pattern = "warn"
single_component_path_imports = "warn"
single_match = "warn"
single_match_else = "warn"
single_range_in_vec_init = "warn"
size_of_ref = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_extend_chars = "warn"
string_from_utf8_as_bytes = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
struct_hash_as_type = "warn"
suboptimal_flops = "warn"
suspicious_arithmetic_impl = "warn"
suspicious_command_arg_space = "warn"
suspicious_doc_comments = "warn"
suspicious_else_formatting = "warn"
suspicious_map = "warn"
suspicious_op_assign_impl = "warn"
suspicious_open_options = "warn"
suspicious_unary_op_in_assignment = "warn"
suspicious_xor_used_as_pow = "warn"
swap_ptr_to_ref = "warn"
swap_with_temporary = "warn"
tabs_in_doc_comments = "warn"
temporary_as = "warn"
temporary_cstring_as_ptr = "warn"
test_attr_in_doctest = "warn"
to_digit_is_some = "warn"
to_string_in_format_args = "warn"
to_string_trait_default = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
toplevel_ref_arg = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute = "warn"
transmute_float_to_int = "warn"
transmute_int_to_bool = "warn"
transmute_int_to_char = "warn"
transmute_int_to_float = "warn"
transmute_num_to_bytes = "warn"
transmute_ptr_to_ptr = "warn"
transmute_zero_sized = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
tuple_array_conversions = "warn"
type_complexity = "warn"
type_repetition_in_bounds = "warn"
unchecked_duration_subtraction = "warn"
uninlined_format_args = "warn"
unit_arg = "warn"
unnecessary_cast = "warn"
unnecessary_clone = "warn"
unnecessary_fallible_conversions = "warn"
unnecessary_filter_map = "warn"
unnecessary_find_map = "warn"
unnecessary_fold = "warn"
unnecessary_iter_cloned = "warn"
unnecessary_join = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_let_if_else = "warn"
unnecessary_literal_bound = "warn"
unnecessary_literal_unwrap = "warn"
unnecessary_map_or = "warn"
unnecessary_min_or_max = "warn"
unnecessary_operation = "warn"
unnecessary_owned_empty_strings = "warn"
unnecessary_safety_comment = "warn"
unnecessary_self_imports = "warn"
unnecessary_sort_by = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_to_owned = "warn"
unnecessary_unwrap = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unneeded_return = "warn"
unneeded_struct_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_format_specs = "warn"
unused_io_amount = "warn"
unused_rounding = "warn"
unused_unit = "warn"
unwrap_or_default = "warn"
unwrap_used = "warn"
upper_case_acronyms = "warn"
use_self = "warn"
useless_asref = "warn"
useless_conversion = "warn"
useless_format = "warn"
useless_let_if_else = "warn"
useless_transmute = "warn"
useless_vec = "warn"
vec_box = "warn"
vec_init_then_push = "warn"
verbose_bit_mask = "warn"
wildcard_enum_match_arm = "warn"
wildcard_imports = "warn"
write_literal = "warn"
write_with_newline = "warn"
writeln_empty_string = "warn"
wrong_self_convention = "warn"
zero_length_zero = "warn"
zero_prefixed_literal = "warn"


[dependencies]
vtcode-acp-client = { path = "vtcode-acp-client", version = "0.85.1" }
vtcode-commons = { path = "vtcode-commons", version = "0.85.1" }
vtcode-config = { path = "vtcode-config", version = "0.85.1" }
vtcode-core = { path = "vtcode-core", version = "0.85.1", default-features = false }
vtcode-tui = { path = "vtcode-tui", version = "0.85.1" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
webbrowser = "1.0"
notify = "6.1.1" # For file watching functionality
home = "0.5.9"   # For home directory detection
tokio-util = { version = "0.7", features = ["compat"] }
serde = { workspace = true }
toml = "0.9.8"
futures = "0.3"
walkdir = "2.5"
itertools = "0.14.0"
memchr = "2.7"
mimalloc = { workspace = true }
tempfile = { workspace = true }
once_cell = "1.19"
libc = "0.2"
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
path-clean = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
# Environment helpers
dotenvy = "0.15"
# Home directory detection
dirs = "6.0"
# Hashing for large output file paths
sha2 = "0.10"
# ANSI styling
anstyle = "1.0"
anstyle-git = "1.1"
anstyle-crossterm = "4.0"
colorchoice = "1.0"
agent-client-protocol = "0.9.3"
percent-encoding = "2.3"
url = "2.5"
shell-words = "1.1"
dialoguer = "0.12.0"
crossterm = { workspace = true }
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
] }
regex = { workspace = true }
rustc-hash = { workspace = true }
smallvec = "1.13"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1.0"
thiserror = { workspace = true }
axum = { version = "0.8", optional = true }

[features]
default = ["tool-chat", "a2a-server"]
tool-chat = []
profiling = []                            # Enable tracing instrumentation for performance profiling
anthropic-api = ["vtcode-core/anthropic-api", "dep:axum"]
a2a-server = ["vtcode-core/a2a-server"]   # Enable OAuth callback server for provider authentication
desktop-notifications = ["vtcode-core/desktop-notifications"]

[profile.dev]
debug = 0
lto = false
# incremental = false required for sccache; set CARGO_INCREMENTAL=1 to override for rapid iteration
incremental = false
opt-level = 0
# Split debuginfo for faster incremental builds (when CARGO_INCREMENTAL=1)
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"

# Optimize build dependencies for faster proc-macro execution
[profile.dev.build-override]
opt-level = 3
codegen-units = 16

# Optimize dependencies slightly (they're cached anyway)
[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.dev-optimized]
inherits = "dev"
lto = "thin"
codegen-units = 1
opt-level = 2

# Fast release profile - thin LTO for ~50% faster builds than full LTO
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization for better performance and size reduction.
opt-level = 3     # Optimize for performance on M4 (was "s" for size)
strip = true      # Ensures debug symbols are removed.
panic = "abort"   # Reduce size of panic paths.
# Additional performance optimizations:
incremental = false # Disable incremental compilation for better optimization

# CI-specific profile for faster builds with minimal debug info
[profile.ci]
inherits = "dev"
# Copy settings from dev profile but with minimal debug info
debug = 0
incremental = false
overflow-checks = false

[profile.bench]
# Optimize benchmarks for accurate performance measurement
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false

# Profile for bloaty analysis - optimized but with debug info
[profile.bloaty]
inherits = "release"
debug = true
strip = false



[[bin]]
name = "vtcode"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = "1.1"
indexmap = { version = "2.12", features = ["serde"] }
rand = "0.9"
regex = { workspace = true }
assert_cmd = "2.1"
predicates = "3.1"
insta = "1.39"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[package.metadata.cargo-machete]
ignored = ["anstyle-crossterm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
